cms/styling: align checkbox for contact form - fixes #51

--- a/adhocracy-plus/assets/scss/components/_contact_form.scss
+++ b/adhocracy-plus/assets/scss/components/_contact_form.scss
@@ -12,6 +12,10 @@ $block-padding-md: 7.5*$padding;
     .form-check-input {
         width: 5% !important;
     }
+
+    .form-check {
+        @extend .pl-3;
+    }
 }
 
 .contact_form__divider {
